Added unflippable disc support to GameLogic